# ai-novel-web

./: .gitignore  AGENTS.md  README.md  config.example.json  config_manager.py  consistency_checker.py  embedding_adapters.py  llm_adapters.py  package-lock.json  prompt_definitions.py  pyproject.toml  requirements.txt
.kiro/specs/webui-ux-optimization/: design.md  requirements.md  tasks.md
backend/: api_server.py  config_store.py  exporter.py  file_keys.py  project_state.py  project_store.py  services.py  task_runtime.py
docs/: README.md  logic_refactoring_design.md  logic_refactoring_design_v2.md  web_frontend_prd.md
novel_generator/: architecture.py  blueprint.py  chapter.py  common.py  finalization.py  knowledge.py  vectorstore_manager.py  vectorstore_utils.py
scripts/: dev.sh
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/src/: App.vue  main.ts
webui/src/api/: client.ts  config.ts  projects.ts  tasks.ts  types.ts  vectorstore.ts
webui/src/auth/: accessKey.ts
webui/src/components/: ActivityBar.vue  BatchGenerateModal.vue  BottomPanel.property.test.ts  BottomPanel.vue  CreateProjectModal.vue  EditorPane.test.ts  EditorPane.vue  FileTree.vue  FileTreeContextMenu.vue  FileTreeItem.vue  GlobalProgressBar.vue  HelpTooltip.vue  ModalShell.vue  ProjectCard.vue  PromptModal.vue  RightPanel.vue  Sidebar.vue  SpaceBackground.vue  StatusPill.vue  StepIndicator.vue  ToastContainer.vue  TopBar.vue  VectorstoreModal.vue
webui/src/composables/: useAutoSave.property.test.ts  useAutoSave.ts  useChapterInfo.ts  useResizable.ts  (+11 more)
(+25 files in other folders)
