[project]
name = "ai-novel-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-inference==1.0.0b9",
    "chromadb==1.0.20",
    "fastapi==0.115.0",
    "google-generativeai==0.8.5",
    "langchain==0.3.27",
    "langchain-chroma==0.2.5",
    "langchain-openai==0.3.32",
    "nltk==3.9.1",
    "openai==1.106.1",
    "pydantic==2.11.7",
    "python-multipart==0.0.9",
    "requests==2.32.5",
    "uvicorn==0.35.0",
]
